resolve sonarqube issues